feat: add linting commands to package.json

--- a/package.json
+++ b/package.json
@@ -41,6 +41,14 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "lint:js": "eslint --ext .js,.ts,.astro .",
+    "lint:js:fix": "eslint --fix --ext .js,.ts,.astro .",
+    "lint:css": "stylelint **/*.{css,scss}",
+    "lint:css:fix": "stylelint --fix **/*.{css,scss}",
+    "lint:files": "prettier --check \"**/*.{html,graphql,yml,yaml,astro}\"",
+    "lint:files:fix": "prettier --write \"**/*.{html,graphql,yml,yaml,astro}\"",
+    "lint:full": "npm run lint:js && npm run lint:css && npm run lint:files",
+    "lint:full:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run lint:files:fix",
     "prepare": "husky install"
   },
   "type": "module",
