--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -2,7 +2,5 @@
   - npm run lint:js
 "*.{css,scss}":
   - npm run lint:css
-"*.{html,graphql,yml,yaml,vue}":
+"*.{html,graphql,yml,yaml,astro}":
   - npm run lint:files
-"*.md":
-  - npm run lint:markdown
