--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "type": "module",
   "dependencies": {
     "@astrojs/check": "^0.3.0",
+    "@astrojs/node": "^6.0.3",
     "@astrojs/sitemap": "^3.0.2",
     "astro": "^3.4.0",
     "typescript": "^5.2.2"
