fix: update configuration files

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,9 +5,8 @@ extends:
 plugins:
   - '@typescript-eslint'
   - 'prettier'
-  - 'jest'
 
-parser: vue-eslint-parser
+parser: '@typescript-eslint/parser'
 parserOptions:
   parser: '@typescript-eslint/parser'
   sourceType: module
