style(prettier): run Prettier to clean up code formatting

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,32 +1,32 @@
 extends:
-  - 'plugin:@typescript-eslint/recommended'
-  - "plugin:prettier/recommended"
-  - "plugin:astro/recommended"
+    - 'plugin:@typescript-eslint/recommended'
+    - 'plugin:prettier/recommended'
+    - 'plugin:astro/recommended'
 plugins:
-  - '@typescript-eslint'
-  - 'prettier'
+    - '@typescript-eslint'
+    - 'prettier'
 
 parser: '@typescript-eslint/parser'
 parserOptions:
-  parser: '@typescript-eslint/parser'
-  sourceType: module
+    parser: '@typescript-eslint/parser'
+    sourceType: module
 
 rules:
-  quotes:
-    - error
-    - single
-  quote-props:
-    - error
-    - consistent
-  prettier/prettier:
-    - error
-    - singleQuote: true
-  vue/multi-word-component-names:
-    - off
-  import/no-anonymous-default-export:
-    - off
-  "@typescript-eslint/ban-ts-comment":
-    - off
-  "vue/v-bind-style":
-    - error
-    - longform
+    quotes:
+        - error
+        - single
+    quote-props:
+        - error
+        - consistent
+    prettier/prettier:
+        - error
+        - singleQuote: true
+    vue/multi-word-component-names:
+        - off
+    import/no-anonymous-default-export:
+        - off
+    '@typescript-eslint/ban-ts-comment':
+        - off
+    'vue/v-bind-style':
+        - error
+        - longform
