--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -1,42 +1,43 @@
 name: Install dependencies and build the project
 
 on:
-  push:
-    branches:
-      - develop
-      - main
-      - "!dependabot/**"
+    push:
+        branches:
+            - develop
+            - main
+            - '!dependabot/**'
 
-  pull_request:
-    branches:
-      - develop
-      - main
-      - "!dependabot/**"
+    pull_request:
+        branches:
+            - develop
+            - main
+            - '!dependabot/**'
 
 jobs:
-  build:
-    name: Build and start Node.js project
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version:
-          - "20.11.0"
+    build:
+        name: Build and start Node.js project
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                node-version:
+                    - '20.11.0'
 
-    steps:
-      - name: Checkout the current branch
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout the current branch
+              uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '${{ matrix.node-version }}'
-          cache: npm
+            - name: Set up Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '${{ matrix.node-version }}'
+                  cache: npm
 
-      - name: Install dependencies in the project
-        run: npm install
+            - name: Install dependencies in the project
+              run: npm install
 
-      - name: Build the project
-        run: npm run build
-        env:
-          NEXT_PUBLIC_PROJECT_URL: ${{ secrets.NEXT_PUBLIC_PROJECT_URL }}
+            - name: Build the project
+              run: npm run build
+              env:
+                  NEXT_PUBLIC_PROJECT_URL:
+                      ${{ secrets.NEXT_PUBLIC_PROJECT_URL }}
