--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,32 +28,47 @@ updates:
       groups:
           framework:
               patterns:
-                  - '^astro$'
-                  - '^@astrojs/*'
+                  - 'astro'
+                  - '@astrojs/check'
+                  - '@astrojs/node'
+                  - '@astrojs/sitemap'
               update-types:
                   - 'minor'
+
           linting-and-formatting:
               patterns:
-                  - 'eslint*'
-                  - 'stylelint*'
+                  - 'eslint'
+                  - 'eslint-config-prettier'
+                  - 'eslint-plugin-simple-import-sort'
+                  - '@eslint/js'
+                  - 'stylelint'
+                  - 'stylelint-config-standard'
                   - 'prettier'
                   - 'prettier-plugin-astro'
               update-types:
                   - 'minor'
+
           typings:
               patterns:
-                  - '@types/*'
+                  - '@types/node'
               update-types:
                   - 'minor'
+
           build-tools:
               patterns:
-                  - 'typescript*'
-                  - 'ts-node*'
+                  - 'typescript'
+                  - 'ts-node'
+                  - 'typescript-eslint'
               update-types:
                   - 'minor'
+
           postcss:
               patterns:
-                  - 'postcss*'
+                  - 'postcss'
+                  - 'postcss-import'
+                  - 'postcss-load-config'
+                  - 'postcss-nested'
+                  - 'postcss-syntax'
                   - 'autoprefixer'
               update-types:
                   - 'minor'
