feat: add patch update types for various dependency groups in dependabot configuration

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -21,6 +21,7 @@ updates:
           - dependency-name: '*'
             update-types:
                 - 'version-update:semver-major'
+
       groups:
           framework:
               patterns:
@@ -30,6 +31,7 @@ updates:
                   - '@astrojs/sitemap'
               update-types:
                   - 'minor'
+                  - 'patch'
 
           linting-and-formatting:
               patterns:
@@ -43,12 +45,16 @@ updates:
                   - 'prettier-plugin-astro'
               update-types:
                   - 'minor'
+                  - 'patch'
+
 
           typings:
               patterns:
                   - '@types/node'
               update-types:
                   - 'minor'
+                  - 'patch'
+
 
           build-tools:
               patterns:
@@ -57,6 +63,8 @@ updates:
                   - 'typescript-eslint'
               update-types:
                   - 'minor'
+                  - 'patch'
+
 
           postcss:
               patterns:
@@ -68,3 +76,4 @@ updates:
                   - 'autoprefixer'
               update-types:
                   - 'minor'
+                  - 'patch'
