--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
         "eslint": "^9.27.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-simple-import-sort": "^12.1.1",
+        "install": "^0.13.0",
+        "jiti": "^2.4.2",
+        "npm": "^11.4.0",
         "postcss": "^8.5.3",
         "postcss-import": "^16.1.0",
         "postcss-load-config": "^6.0.1",
